bug fixes related to evolve slurm

--- a/scripts/scan/lhc_configs.yml
+++ b/scripts/scan/lhc_configs.yml
@@ -31,11 +31,11 @@ evolve:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [16],            
+            'omp': [8, 16],            
             'mpi': ['openmpi4'],
             'time': [60],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16],
+            'cores_per_cpu': [8, 16],
             'repeats': 3
         },
 
@@ -58,9 +58,9 @@ evolve:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [16],
+            'omp': [8, 16],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16],
+            'cores_per_cpu': [8, 16],
 
             'mpi': ['openmpi4'],
             'time': [60],
@@ -86,10 +86,10 @@ evolve:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [16],
+            'omp': [8, 16],
             'mpi': ['openmpi4'],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16],
+            'cores_per_cpu': [8, 16],
 
             'time': [60],
             'repeats': 3
@@ -114,10 +114,10 @@ evolve:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [16],
+            'omp': [8, 16],
             'mpi': ['openmpi4'],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16],
+            'cores_per_cpu': [8, 16],
 
             'time': [60],
             'repeats': 3
@@ -142,10 +142,10 @@ evolve:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [16],
+            'omp': [8, 16],
             'mpi': ['openmpi4'],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16],
+            'cores_per_cpu': [8, 16],
 
             'time': [60],
             'repeats': 3
@@ -170,10 +170,10 @@ evolve:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [16],
+            'omp': [8, 16],
             'mpi': ['openmpi4'],
             'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [16, 16],
+            'cores_per_cpu': [8, 16],
 
             'time': [60],
             'repeats': 3
@@ -297,7 +297,7 @@ slurm:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [16],            
+            'omp': [8, 16],            
             'mpi': ['openmpi4'],
             'time': [60],
             'repeats': 3
@@ -322,7 +322,7 @@ slurm:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [16],
+            'omp': [8, 16],
             'mpi': ['openmpi4'],
             'time': [60],
             'repeats': 3
@@ -347,7 +347,7 @@ slurm:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [16],
+            'omp': [8, 16],
             'mpi': ['openmpi4'],
             'time': [60],
             'repeats': 3
@@ -372,7 +372,7 @@ slurm:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [16],
+            'omp': [8, 16],
             'mpi': ['openmpi4'],
 
             'time': [60],
@@ -398,7 +398,7 @@ slurm:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [16],
+            'omp': [8, 16],
             'mpi': ['openmpi4'],
 
             'time': [60],
@@ -424,7 +424,7 @@ slurm:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [16],
+            'omp': [8, 16],
             'mpi': ['openmpi4'],
 
             'time': [60],
