--- a/scripts/scan/lhc_configs.yml
+++ b/scripts/scan/lhc_configs.yml
@@ -31,11 +31,14 @@ evolve:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [8, 16],            
+            # 'omp': [16],            
+            'omp': [16],            
             'mpi': ['openmpi4'],
             'time': [60],
-            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [8, 16],
+            # 'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
+            'partition': ['computes_gpu_k20'],
+            # 'cores_per_cpu': [16],
+            'cores_per_cpu': [16],
             'repeats': 3
         },
 
@@ -58,9 +61,9 @@ evolve:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [8, 16],
-            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [8, 16],
+            'omp': [16],
+            'partition': [computes_gpu_k20'],
+            'cores_per_cpu': [16],
 
             'mpi': ['openmpi4'],
             'time': [60],
@@ -86,10 +89,10 @@ evolve:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [8, 16],
+            'omp': [16],
             'mpi': ['openmpi4'],
-            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [8, 16],
+            'partition': [computes_gpu_k20'],
+            'cores_per_cpu': [16],
 
             'time': [60],
             'repeats': 3
@@ -114,10 +117,10 @@ evolve:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [8, 16],
+            'omp': [16],
             'mpi': ['openmpi4'],
-            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [8, 16],
+            'partition': [computes_gpu_k20'],
+            'cores_per_cpu': [16],
 
             'time': [60],
             'repeats': 3
@@ -142,10 +145,10 @@ evolve:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [8, 16],
+            'omp': [16],
             'mpi': ['openmpi4'],
-            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [8, 16],
+            'partition': [computes_gpu_k20'],
+            'cores_per_cpu': [16],
 
             'time': [60],
             'repeats': 3
@@ -170,10 +173,10 @@ evolve:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [8, 16],
+            'omp': [16],
             'mpi': ['openmpi4'],
-            'partition': ['computes_gpu_p40', 'computes_gpu_k20'],
-            'cores_per_cpu': [8, 16],
+            'partition': [computes_gpu_k20'],
+            'cores_per_cpu': [16],
 
             'time': [60],
             'repeats': 3
@@ -297,7 +300,7 @@ slurm:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [8, 16],            
+            'omp': [16],            
             'mpi': ['openmpi4'],
             'time': [60],
             'repeats': 3
@@ -322,7 +325,7 @@ slurm:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [8, 16],
+            'omp': [16],
             'mpi': ['openmpi4'],
             'time': [60],
             'repeats': 3
@@ -347,7 +350,7 @@ slurm:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [8, 16],
+            'omp': [16],
             'mpi': ['openmpi4'],
             'time': [60],
             'repeats': 3
@@ -372,7 +375,7 @@ slurm:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [8, 16],
+            'omp': [16],
             'mpi': ['openmpi4'],
 
             'time': [60],
@@ -398,7 +401,7 @@ slurm:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [8, 16],
+            'omp': [16],
             'mpi': ['openmpi4'],
 
             'time': [60],
@@ -424,7 +427,7 @@ slurm:
             'timing': ['timing'],
             'gpu': [1],
             'workers': [1],
-            'omp': [8, 16],
+            'omp': [16],
             'mpi': ['openmpi4'],
 
             'time': [60],
