--- a/scripts/scan/sps_configs.yml
+++ b/scripts/scan/sps_configs.yml
@@ -33,7 +33,7 @@ evolve:
             'omp': [16],
             'mpi': ['openmpi4'],
             'time': [60],
-            'partition': ['computes_gpu_k20'],
+            'partition': ['computes_gpu_p40'],
             'cores_per_cpu': [16],
 
             'repeats': 3
@@ -61,7 +61,7 @@ evolve:
             'omp': [16],
             'mpi': ['openmpi4'],
             'time': [60],
-            'partition': ['computes_gpu_k20'],
+            'partition': ['computes_gpu_p40'],
             'cores_per_cpu': [16],
 
             'repeats': 3
@@ -93,7 +93,7 @@ evolve:
             'omp': [16],
             'mpi': ['openmpi4'],
             'time': [60],
-            'partition': ['computes_gpu_k20'],
+            'partition': ['computes_gpu_p40'],
             'cores_per_cpu': [16],
 
             'repeats': 3
@@ -123,7 +123,7 @@ evolve:
             'omp': [16],
             'mpi': ['openmpi4'],
             'time': [60],
-            'partition': ['computes_gpu_k20'],
+            'partition': ['computes_gpu_p40'],
             'cores_per_cpu': [16],
 
             'repeats': 3
@@ -153,7 +153,7 @@ evolve:
             'omp': [16],
             'mpi': ['openmpi4'],
             'time': [60],
-            'partition': ['computes_gpu_k20'],
+            'partition': ['computes_gpu_p40'],
             'cores_per_cpu': [16],
 
             'repeats': 3
@@ -182,7 +182,7 @@ evolve:
             'omp': [16],
             'mpi': ['openmpi4'],
             'time': [60],
-            'partition': ['computes_gpu_k20'],
+            'partition': ['computes_gpu_p40'],
             'cores_per_cpu': [16],
 
             'repeats': 3
